Tcp Servic and Client projects

--- a/FormulaBuilderConsoleDebug/App.config
+++ b/FormulaBuilderConsoleDebug/App.config
@@ -3,6 +3,12 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <appSettings>
+    <add key="Host" value="localhost" />
+    <add key="Address" value="127.0.0.1" />
+    <add key="Port" value="10001" />
+    <add key="BackLog" value="100" />
+  </appSettings>
   <system.serviceModel>
     <bindings>
       <netNamedPipeBinding>
